Criação do componente extract-table

--- a/assets/sass/theme/_variables.scss
+++ b/assets/sass/theme/_variables.scss
@@ -943,3 +943,14 @@ $blog-post-color4: #4FB9CE;
 
 $blog-post-padding: 20px;
 $blog-post-border-radius: 8px;
+
+
+// Extraact table
+//
+// Define colors and bottom margin
+
+$extract-table-margin-bottom: 50px;
+$extract-table-purple: #6D2080;
+$extract-table-gray: #A8A8A8;
+$extract-table-gray-light: #F1F1F1;
+$extract-table-white: #FFFFFF;
