--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -1,10 +1,131 @@
 @import 'theme/main.scss';
 
-
 head {
-    height: 56px;
+  height: 56px;
 }
 
 main {
-    margin-top: 56px;
+  margin-top: 56px;
+}
+
+.top-search-input {
+  max-width: 45%;
+  height: 24px;
+  padding: 10px 30px 7px;
+  border-radius: 5px;
+  background-image: url("/img/search-icon.svg");
+  background-repeat: no-repeat;
+  background-size: 10%;
+
+}
+
+/* Setando cor placeholder */
+
+.top-search-input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #B3B3B3;
+  opacity: 1; /* Firefox */
+}
+
+.top-search-input:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: #B3B3B3;
+}
+
+.top-search-input::-ms-input-placeholder { /* Microsoft Edge */
+  color: #B3B3B3;
+}
+
+.badge-size {
+  height: 25px;
+  font-size: 14px;
+  margin-top: 7px;
+  margin-left: 7px;
+  padding: 3px 10px 0 10px;
+}
+
+.padding-0 {
+  padding: 0;
+}
+
+.padding-left-0 {
+  padding-left: 0;
+}
+
+.margin-top-10 {
+  margin-top: 10px;
+}
+
+.margin-bottom-10 {
+  margin-bottom: 20px;
+}
+
+.margin-left-0 {
+  margin-left: 0;
+}
+
+.social-icons {
+  margin-top: 10px;
+  margin-right: 5px;
+  max-width: 30px;
+}
+
+.main-jumbotron-content {
+  padding: 5rem 0;
+}
+
+.sombra-esquerda {
+  -webkit-box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.1);
+}
+
+.big-image-post-blog {
+  background-image: url('https://picsum.photos/500/500');
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+
+.btn-ler-mais {
+  background-color: #00ffa2;
+  color: #76007f;
+  padding: 7px 4rem 0 4rem;
+  border-radius: 8px;
+  font-size: 18px;
+  font-weight: 900;
+}
+
+.btn-ler-mais:hover {
+  background-color: #01ff8c;
+  color: #323a3d;
+}
+
+.text-purple {
+  color: #76007f;
+}
+
+.text-light-gray {
+  color: #B3B3B3;
+}
+
+.recuo-post-destaque {
+  margin-top: -180px;
+}
+
+.background-white {
+  background-color: #FFF;
+}
+
+/* SOBRESCREVENDO CLASSES DO BOOTSTRAP */
+.jumbotron {
+  border-radius: 0;
+
+  background: rgba(111, 0, 128, 1);
+  background: -moz-linear-gradient(left, rgba(111, 0, 128, 1) 0%, rgba(101, 0, 129, 1) 49%, rgba(73, 54, 136, 1) 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(111, 0, 128, 1)), color-stop(49%, rgba(101, 0, 129, 1)), color-stop(100%, rgba(73, 54, 136, 1)));
+  background: -webkit-linear-gradient(left, rgba(111, 0, 128, 1) 0%, rgba(101, 0, 129, 1) 49%, rgba(73, 54, 136, 1) 100%);
+  background: -o-linear-gradient(left, rgba(111, 0, 128, 1) 0%, rgba(101, 0, 129, 1) 49%, rgba(73, 54, 136, 1) 100%);
+  background: -ms-linear-gradient(left, rgba(111, 0, 128, 1) 0%, rgba(101, 0, 129, 1) 49%, rgba(73, 54, 136, 1) 100%);
+  background: linear-gradient(to right, rgba(111, 0, 128, 1) 0%, rgba(101, 0, 129, 1) 49%, rgba(73, 54, 136, 1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#6f0080', endColorstr='#493688', GradientType=1);
+
+  padding-top: 1rem;
 }
