--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -66,6 +66,10 @@ main {
   margin-top: 10px;
 }
 
+.margin-top-20 {
+  margin-top: 20px;
+}
+
 .margin-bottom-10 {
   margin-bottom: 10px;
 }
@@ -195,7 +199,7 @@ main {
 
 /** RESPONSIVE **/
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 600px) {
   .top-search-input {
     max-width: 100%;
   }
@@ -206,7 +210,7 @@ main {
     display: none;
   }
   .main-jumbotron-content {
-    padding: 1rem 0 6rem 0;
+    padding: 1rem 0 0 0;
   }
   .btn-outline-purple {
     width: 250px;
@@ -219,6 +223,24 @@ main {
   }
   .mobile_badge {
     display: inline;
+    padding: 14px 35px 25px 35px;
+    border-radius: 7px;
+    font-size: 16px;
+  }
+  .post-destaque {
+    display: none;
+  }
+  .blog-posts {
+    display: none;
+  }
+  main {
+    margin: 0;
+  }
+  h1 {
+    font-size: 25px;
+  }
+  h5 {
+    font-size: 17px;
   }
 }
 
@@ -229,9 +251,14 @@ main {
   background-color: rgba(118, 0, 127, 0.8);
   width: 100%;
   height: 100%;
-  z-index: 99999999999;
+  z-index: 500;
   position: fixed;
   top: 0;
   left: 0;
   text-align: center;
+}
+
+.link-mova {
+  color: #FFF;
+  font-weight: 900;
 }
